--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
   padding-top: 100px;
   padding-bottom: 100px;
   height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   
 
 }
@@ -19,6 +21,6 @@
 }
 
 input{
-  color: whitesmoke !important;
+  color: #ffff !important;
   font-weight: bold !important;
 }
