--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,17 @@
-.App{
-  background-image:linear-gradient(to right bottom, #FE0C6B, #29055E);
+.App {
   padding-top: 100px;
   padding-bottom: 100px;
-  height: 100%;
-  max-width: 100%;
-  max-height: 100%;
-  
 }
 
-.app-main{
+.app-main {
   text-align: center;
 }
 
-.app-footer{
-  height: 200px;
+.app-footer {
+  /* height: 200px; */
 }
 
-input{
+input {
   color: #ffff !important;
   font-weight: bold !important;
 }
